--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "minimum-stability": "dev",
     "require": {
         "slim/slim": "^3.0@RC",
-        "odango/odango.php": "dev-master"
+        "odango/odango.php": "dev-master",
+        "twig/twig": "~1.0"
     }
 }
